--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,6 +4,7 @@ version = "0.1.0"
 edition = "2024"
 
 [dependencies]
+arboard = { version = "3.6.0", features = ["wayland-data-control"] }
 clap = { version = "4.5.39", features = ["derive"] }
 directories = "6.0.0"
 mlua = { version = "0.10.5", features = ["luajit", "vendored"] }
